Fix external player in dark mode

--- a/assets/css/site/player.css
+++ b/assets/css/site/player.css
@@ -151,3 +151,9 @@
         margin-top: 10px;
     }
 }
+
+@media (prefers-color-scheme: dark) {
+    .player-external {
+        background: rgba(13, 13, 13, 0.8);
+    }
+}
